--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -25,4 +25,17 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <style name="Iconic_TitleBar">
+        <item name="android:background">@color/primary</item>
+    </style>
+    <style name="Iconic_Header">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Subhead</item>
+        <item name="android:textColor">@color/icons</item>
+    </style>
+    <style name="Iconic_Subheading">
+        <item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Subhead</item>
+        <item name="android:textColor">@color/secondary_text</item>
+
+    </style>
+
 </resources>
