--- a/XYZReader/src/main/res/drawable/gradient_overlay.xml
+++ b/XYZReader/src/main/res/drawable/gradient_overlay.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle">
     <gradient
         android:angle="-90"
-        android:startColor="@color/primary_text"
-        android:centerColor="@color/primary_text"
-        android:endColor="#4d000000"
+        android:startColor="#4d000000"
+        android:centerColor="#00000000"
+        android:endColor="#00000000"
         android:type="linear"
     />
 </shape>
