--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -17,7 +17,7 @@
                 android:id="@+id/photo_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/photo_placeholder">
+                >
                 <!--suppress AndroidLintContentDescription -->
                 <ImageView
                     android:id="@+id/photo"
@@ -42,38 +42,51 @@
                 android:elevation="2dp"
                 android:layout_marginTop="@dimen/detail_card_top_margin">
 
-                <LinearLayout
-                    android:id="@+id/meta_bar"
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/detail_titlebar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:orientation="vertical"
-                    android:paddingLeft="@dimen/detail_inner_horiz_margin"
-                    android:paddingRight="@dimen/detail_inner_horiz_margin"
-                    android:paddingTop="@dimen/detail_metabar_vert_padding"
-                    android:paddingBottom="@dimen/detail_metabar_vert_padding"
-                    android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
-                    style="@style/Iconic_TitleBar">
+                    style="@style/Theme.Iconic.TitleBar">
 
-                    <TextView
-                        android:id="@+id/article_title"
-                        style="?android:attr/textAppearanceLarge"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
-                        android:fontFamily="sans-serif-condensed"
-                        android:textColor="#fff"
-                        android:textStyle="bold"
-                        android:textSize="@dimen/detail_title_text_size"
-                        android:lineSpacingMultiplier="0.9"/>
+                    <!--<LinearLayout-->
+                        <!--android:id="@+id/meta_bar"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_gravity="bottom"-->
+                        <!--android:orientation="vertical"-->
+                        <!--android:paddingLeft="@dimen/detail_inner_horiz_margin"-->
+                        <!--android:paddingRight="@dimen/detail_inner_horiz_margin"-->
+                        <!--android:paddingTop="@dimen/detail_metabar_vert_padding"-->
+                        <!--android:paddingBottom="@dimen/detail_metabar_vert_padding"-->
+                        <!--android:layout_marginBottom="@dimen/detail_metabar_vert_padding"-->
+                        <!--style="@style/Iconic_TitleBar">-->
+                        <!--<TextView-->
+                            <!--android:id="@+id/article_title"-->
+                            <!--style="?android:attr/textAppearanceLarge"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"-->
+                            <!--android:fontFamily="sans-serif-condensed"-->
+                            <!--android:textColor="#fff"-->
+                            <!--android:textStyle="bold"-->
+                            <!--android:textSize="@dimen/detail_title_text_size"-->
+                            <!--android:lineSpacingMultiplier="0.9"/>-->
+                        <!--<TextView-->
+                            <!--android:id="@+id/article_byline"-->
+                            <!--style="?android:attr/textAppearanceSmall"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:textColor="#8fff" />-->
 
-                    <TextView
-                        android:id="@+id/article_byline"
-                        style="?android:attr/textAppearanceSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#8fff" />
-                </LinearLayout>
+
+
+                    <!--</LinearLayout>-->
+
+
+
+                </android.support.v7.widget.Toolbar>
+
+
 
                 <TextView
                     android:id="@+id/article_body"
