--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -10,27 +10,33 @@
     android:focusable="true"
     >
 
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/gradient_overlay">
 
         <!--suppress AndroidLintContentDescription -->
+        <FrameLayout
+            android:id="@+id/thumb_holder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
-            android:id="@+id/thumbnail"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:scaleType="centerCrop"
-            />
+            <com.example.xyzreader.ui.DynamicHeightNetworkImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/gradient_overlay"
+                />
+        </FrameLayout>
 
-        <View
-            android:layout_centerHorizontal="true"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/gradient_overlay"
-            />
 
         <TextView
             android:id="@+id/article_title"
@@ -44,13 +50,14 @@
             android:paddingBottom="4dp"
             android:ellipsize="end"
             android:maxLines="4"
-            style="@style/Iconic_Header"/>
+            style="@style/Theme.Iconic.Header"/>
 
 
         <TextView
             android:id="@+id/article_subtitle"
-            android:layout_below="@+id/thumbnail"
+
             android:layout_alignParentEnd="true"
+            android:layout_below="@+id/thumb_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="16dp"
@@ -58,9 +65,10 @@
             android:paddingBottom="16dp"
             android:maxLines="2"
             android:ellipsize="end"
-            style="@style/Iconic_Subheading"/>
+            style="@style/Theme.Iconic.Subheading"/>
 
 
     </RelativeLayout>
+
 
 </android.support.v7.widget.CardView>
