--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/primary_light">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -36,10 +37,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:paddingBottom="28dp"
-        android:paddingLeft="@dimen/list_side_margin"
-        android:paddingRight="@dimen/list_side_margin"
-        android:paddingTop="116dp"
+        android:paddingBottom="24dp"
+        android:paddingLeft="@dimen/keyline_edge"
+        android:paddingRight="@dimen/keyline_edge"
+        android:paddingTop="@dimen/keyline_below_action_bar"
         android:scrollbarStyle="outsideOverlay"
         />
 
