--- a/XYZReader/src/main/res/layout/fragment_detail_material.xml
+++ b/XYZReader/src/main/res/layout/fragment_detail_material.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:background="@color/primary_light">
 
 
 
@@ -12,7 +13,8 @@
         android:id="@+id/detail_app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_photo_height"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        >
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/detail_collapsing_toolbar"
@@ -20,7 +22,9 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/primary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:elevation="8dp">
+
 
             <ImageView
                 android:id="@+id/photo"
@@ -28,53 +32,56 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"/>
+                app:layout_collapseMode="parallax"
+                />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/detail_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
                 android:elevation="8dp"
-                app:layout_collapseMode="pin"
-                />
+                app:layout_collapseMode="pin">
+
+                <ImageButton
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                    android:id="@+id/action_up"
+                    android:layout_width="56dp"
+                    android:layout_height="?actionBarSize"
+                    android:background="?selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/up"
+                    android:src="@drawable/ic_arrow_back" />
+                </android.support.v7.widget.Toolbar>
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
-        android:id="@+id/up_container"
-        android:background="@android:color/transparent"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize">
-
-        <ImageButton
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:id="@+id/action_up"
-            android:layout_width="56dp"
-            android:layout_height="?actionBarSize"
-            android:background="?selectableItemBackgroundBorderless"
-            android:contentDescription="@string/up"
-            android:src="@drawable/ic_arrow_back" />
-    </FrameLayout>
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/detail_scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_marginStart="@dimen/keyline_edge"
+        android:layout_marginEnd="@dimen/keyline_edge"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:scrollbars="vertical"
+        android:scrollbarSize="2dp"
+        android:scrollbarThumbVertical="@color/secondary_text"
 
-        <TextView
-            android:id="@+id/detail_body"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
-            android:layout_marginRight="@dimen/detail_inner_horiz_margin"
-            android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
-            android:paddingBottom="@dimen/detail_body_bottom_margin"
-            style="@style/Theme.Iconic.Body"
-            android:textColorLink="@color/theme_accent"
-            android:textSize="@dimen/detail_body_text_size"/>
+        >
+
+
+            <TextView
+                android:id="@+id/detail_body"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="@dimen/keyline_edge"
+                style="@style/Theme.Iconic.Body"
+                android:textColorLink="@color/theme_accent"
+                android:elevation="2dp"
+                />
+
+
 
     </android.support.v4.widget.NestedScrollView>
 
