--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -1,22 +1,22 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:clickable="true"
-    android:focusable="true"
-    >
-
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    xmlns:tools="http://schemas.android.com/tools"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginBottom="4dp"
+                                    android:layout_marginLeft="4dp"
+                                    android:layout_marginRight="4dp"
+                                    android:layout_marginTop="4dp"
+                                    android:clickable="true"
+                                    android:focusable="true"
+                                    app:cardBackgroundColor="@color/cardview_light_background">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/gradient_overlay">
+        android:background="@drawable/gradient_overlay"
+        android:orientation="vertical">
 
         <!--suppress AndroidLintContentDescription -->
         <FrameLayout
@@ -30,6 +30,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -40,32 +41,32 @@
 
         <TextView
             android:id="@+id/article_title"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
+            style="@style/Theme.Iconic.Header"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="16dp"
-            android:paddingTop="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="4dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:ellipsize="end"
             android:maxLines="4"
-            style="@style/Theme.Iconic.Header"/>
+            android:paddingBottom="4dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="16dp"/>
 
 
         <TextView
             android:id="@+id/article_subtitle"
 
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/thumb_holder"
+            style="@style/Theme.Iconic.Subheading"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="16dp"
-            android:maxLines="2"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/thumb_holder"
             android:ellipsize="end"
-            style="@style/Theme.Iconic.Subheading"/>
+            android:maxLines="2"
+            android:paddingBottom="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"/>
 
 
     </RelativeLayout>
