--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
 
 
     <!--/Iconic Styles based off of Icon palette/-->
-    <style name="Theme.Iconic" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.Iconic" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
@@ -28,11 +28,11 @@
 
     <style name="Theme.Iconic.TitleBar">
         <item name="android:background">@color/primary</item>
-        <item name="android:text" tools:targetApi="m">@color/icons</item>
+        <item name="android:text" tools:targetApi="m">@color/white</item>
     </style>
 
     <style name="Theme.Iconic.Header">
-        <item name="android:textColor">@color/icons</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="Theme.Iconic.Subheading">
@@ -40,8 +40,13 @@
     </style>
 
     <style name="Theme.Iconic.Body">
-        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:typeface">serif</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Body1</item>
     </style>
+
+
 
 
 </resources>
