implemented toolbar up button

--- a/XYZReader/src/main/res/layout/fragment_detail_material.xml
+++ b/XYZReader/src/main/res/layout/fragment_detail_material.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="@color/white">
 
 
@@ -13,44 +11,31 @@
         android:id="@+id/detail_app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_photo_height"
-        android:fitsSystemWindows="true"
-        >
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/detail_collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
             app:contentScrim="@color/primary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            android:elevation="8dp">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
 
             <ImageView
                 android:id="@+id/photo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                />
+                app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/detail_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
-                android:elevation="8dp"
-                app:layout_collapseMode="pin">
-
-                <ImageButton
-                    android:id="@+id/action_up"
-                    android:layout_width="56dp"
-                    android:layout_height="?actionBarSize"
-                    android:background="?selectableItemBackgroundBorderless"
-                    android:contentDescription="@string/up"
-                    android:src="@drawable/ic_arrow_back"
-                    />
-                </android.support.v7.widget.Toolbar>
+                app:layout_scrollFlags="scroll|enterAlways"
+                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                android:elevation="4dp"
+                app:layout_collapseMode="pin"/>
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -66,10 +51,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:scrollbars="vertical"
         android:scrollbarSize="2dp"
-        android:scrollbarThumbVertical="@color/secondary_text"
-
-        >
-
+        android:scrollbarThumbVertical="@color/secondary_text">
 
             <TextView
                 android:id="@+id/detail_body"
@@ -78,10 +60,7 @@
                 android:padding="@dimen/keyline_edge"
                 style="@style/Theme.Iconic.Body"
                 android:textColorLink="@color/theme_accent"
-                android:elevation="2dp"
-                />
-
-
+                android:elevation="2dp"/>
 
     </android.support.v4.widget.NestedScrollView>
 
@@ -94,7 +73,8 @@
         android:layout_marginBottom="@dimen/keyline_edge"
         android:layout_marginEnd="@dimen/keyline_edge"
         android:contentDescription="@string/action_share"
-        />
+        android:elevation="6dp"/>
+
 
 
 </android.support.design.widget.CoordinatorLayout>
