--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -3,17 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    style="@style/Theme.Iconic"
     android:background="@color/primary_light">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/list_activity_toolbar"
             style="@style/Theme.Iconic.TitleBar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:layout_marginLeft="@dimen/list_toolbar_side_margin"
             android:layout_marginRight="@dimen/list_toolbar_side_margin"
-
-            android:elevation="6dp"
+            android:elevation="4dp"
             >
 
             <ImageView
