--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -20,15 +20,19 @@
 
 
     <!--/Iconic Styles based off of Icon palette/-->
-    <style name="Theme.Iconic" parent="Theme.AppCompat.NoActionBar">
+    <style name="Base.Theme.Iconic" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+
+    </style>
+
+
+    <style name="Theme.Iconic" parent="Base.Theme.Iconic">
     </style>
 
     <style name="Theme.Iconic.TitleBar">
         <item name="android:background">@color/primary</item>
-        <item name="android:text" tools:targetApi="m">@color/white</item>
     </style>
 
     <style name="Theme.Iconic.Header">
@@ -45,6 +49,10 @@
         <item name="android:background">@color/white</item>
         <item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Body1</item>
     </style>
+
+
+
+
 
 
 
