--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -1,28 +1,28 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     style="@style/Theme.Iconic"
-    android:background="@color/primary_light">
+    android:background="@color/white">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/list_activity_toolbar"
-            style="@style/Theme.Iconic.TitleBar"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:layout_marginLeft="@dimen/list_toolbar_side_margin"
-            android:layout_marginRight="@dimen/list_toolbar_side_margin"
-            android:elevation="4dp"
-            >
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/list_activity_toolbar"
+        style="@style/Theme.Iconic.TitleBar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:layout_marginLeft="@dimen/list_toolbar_side_margin"
+        android:layout_marginRight="@dimen/list_toolbar_side_margin"
+        android:elevation="4dp">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/logo"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/logo"/>
 
-        </android.support.v7.widget.Toolbar>
+    </android.support.v7.widget.Toolbar>
 
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -41,8 +41,6 @@
         android:paddingLeft="@dimen/keyline_edge"
         android:paddingRight="@dimen/keyline_edge"
         android:paddingTop="@dimen/keyline_below_action_bar"
-        android:scrollbarStyle="outsideOverlay"
-        />
-
+        android:scrollbarStyle="outsideOverlay"/>
 
 </android.support.design.widget.CoordinatorLayout>
